# embeddings_for_immune_tasks

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
bench/: alphaseq_covid_embeddings.ipynb  bcr_ablang_embeddings.ipynb  tcr_dresden_embed_esm.ipynb  tcr_dresden_embed_tcrbert.ipynb
data/antibody/covid_alphaseq/: data_ref.md
data/bcr/bcells_guikema/sequences/: data_ref.md
data/tcr/raw_cdr/: data_ref.md
experiments/covid_affinity_ablang/: covid_exp_base.json
experiments/covid_affinity_esm/: covid_exp_650M_6.json
experiments/covid_esm/hc_650M/: covid_esm_650M_hc_0.json
experiments/covid_esm/lc_650M/: covid_esm_650M_lc_0.json
experiments/guikema_esm/: guikema_esm_base.json
experiments/titan_classification/: titan_esm650_L33.json
immune_embeddings/: utils.py
immune_embeddings/data/: __init__.py  bcr_guikema_to_esm.py  covid_regression_from_ablang.py  covid_regression_from_esm.py  covid_to_esm.py  data_utils.py  titan_classification.py
immune_embeddings/data/esm_embeddings/: __init__.py  bcr.py
immune_embeddings/models/: __init__.py  classifier.py  mlp.py  regressor.py
immune_embeddings/models/embeddings/: __init__.py  base.py  esm.py  tcr_bert.py
immune_embeddings/pipelines/: __main__.py  cli.py  data_registry.py  experiment.py  model_registry.py  registry.py
